<resources>

    <string name="app_name">مدیر ساختمان</string>

    <string name="my_email">sinasoheili79@gmail.com</string>
    <string name="email_subject">گزارش مشکل در برنامه‌ی @string/app_name</string>

    <string name="tv_setRole">برای شروع لطفا نقش خود را در ساختمان انتخاب کنید.</string>
    <string name="btn_setRole_manager">مدیر ساختمان</string>
    <string name="btn_setRole_user">ساکن ساختمان</string>
    <string name="user_exists">این کاربر موجود است.</string>
    <string name="insert_correct_password">لطفا رمز درست را وارد کنید.</string>

    <string name="setRole_user_login">لطفا شماره موبایل خود را وارد کنید.\n شماره ساختمان را از مدیر ساختمان دریافت کنید.\n همچنین قبل از ورود مطمئن شوید که مدیر ساختمان نام شما را ذخیره کرده است</string>

    <string name="score_to_app">امتیاز به برنامه</string>
    <string name="bug_report">گزارش مشکل</string>

    <string name="hint_phone">شماره موبایل</string>
    <string name="hint_passwd">رمز عبور</string>
    <string name="hint_passwd_confirm">تکرار رمز عبور</string>

    <string name="cancel">لغو</string>
    <string name="submit">تایید</string>
    <string name="fill_field">لطفا این قسمت را کامل کنید!</string>
    <string name="invalid">سازگار نمی‌باشد!</string>

    <string name="sever_internal_fail">مشکلی در سرور رخ داده است لطفا بعدا امتحان کنید!</string>

    <string name="fail_connect_to_server">ارتباط با سرور ممکن نیست! لطفا دسترسی خود را به اینترنت چک کنید.</string>

    <string name="send_email">ارسال ایمیل</string>
    <string name="bugReport_dialog_title">گزارش مشکل</string>
    <string name="bugReport_dialog_message">درصورت مشاهده مشکل در نرم افزار از ایمیل زیر استفاده کنید.\n از اینکه در عملکرد بهتر نرم افزار مشارکت میکنید ممنونم</string>

    <string name="buildig_list_is_empty">هنوز ساختمانی اضافه نکرده اید!</string>
    <string name="unit_list_is_empty">هنوز واحدی به این ساختمان اضافه نکرده اید!</string>
    <string name="empty_repair_list">هنوز گزینه‌ای به لیست تعمیرات اضافه نشده است!</string>
    <string name="empty_receipt_list">هنوز گزینه‌ای به لیست قبض ها اضافه نشده است!</string>
    <string name="empty_notification_list">هنوز اطلاعیه‌ای درج نشده است!</string>
    <string name="empty_charge_list">هنوز شارژی درج نشده است!</string>

    <string name="notification_title">موضوع اطلاعیه</string>
    <string name="notification_message">پیام اطلاعیه</string>

    <string name="date">تاریخ</string>

    <string name="chargeListItem_amount">مبلغ : %s</string>
    <string name="chargeListItem_status">وضعیت :</string>
    <string name="chargeListItem_issueDate">تاریخ صدور : %s</string>
    <string name="chargeListItem_payDate">تاریخ پرداخت : %s</string>

    <string name="undefined">نا‌مشخص</string>

    <string name="amount">مبلغ</string>

    <string name="payDate">تاریخ پرداخت</string>
    <string name="issueDate">تاریخ صدور</string>

    <string name="unitInfo">مشخصات واحد</string>
    <string name="ownerInfo">مشخصات مالک</string>
    <string name="changes">تغییرات</string>

    <string name="unit">واحد %s</string>
    <string name="tag">پلاک %s</string>

    <string name="receiptListItem_IssueDate">تاریخ صدور %s</string>
    <string name="receiptListItem_PayDate">تاریخ پرداخت %s</string>
    <string name="receiptListItem_amount">مبلغ %s</string>

    <string name="building_name">نام ساختمان</string>
    <string name="building_cash">موجودی حساب ساختمان</string>
    <string name="address">آدرس</string>
    <string name="unit_count">تعداد واحد</string>
    <string name="building_id">شماره ساختمان</string>

    <string name="today">امروز</string>
    <string name="date_format">%s/%s/%s</string>

    <string name="register_server_error">سرور اجازه ‌ذخیره اظلاعات را نمی‌دهد!! لطفا با پشتیبان تماس بگیرید.</string>

    <string name="unit_number">واحد %s</string>
    <string name="owner_name">مالک %s</string>
    <string name="unit_tag">پلاک %s</string>

    <string name="manager_menu_bab_unitList_addNotification">اطلاعیه</string>
    <string name="manager_menu_bab_unitList_addRepair">تعمیرات</string>
    <string name="manager_menu_bab_unitList_addReceipt">قبض ها</string>
    <string name="manager_menu_bab_unitList_buildingInfo">اطلاعات ساختمان</string>

    <string name="menu_bab_buildingList_setting">تنظیمات</string>

    <string name="owner_name_label">نام مالک</string>
    <string name="unit_number_label">شماره واحد</string>
    <string name="unit_tag_label">پلاک</string>

    <string name="id_receipt">شناسه قبض</string>
    <string name="id_payment">شناسه پرداخت</string>

    <string name="comment">توضیحات</string>
    <string name="title">عنوان</string>

    <string name="deleteUnit">حذف واحد</string>
    <string name="addCharge">درج شارژ</string>
    <string name="chargeList">مشاهده لیست شارژ</string>

    <string name="unitSuccessfullyDeleted">واحد با موفقیت حذف شد</string>
    <string name="doYouConfirmDeleteUnit">آیا از حذف این واحد از ساختمان مطمئن هستید؟؟</string>

    <string name="Warning">هشدار</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>

    <string name="charge_successfully_added">شارژ با موفقیت ذخیره شد</string>

    <string name="fail_to_delete">امکان حذف وجود ندارد!</string>

    <string name="doYouConfirmDeleteRepair">آیا از حذف گزارش تعمیر مطمئن هستید؟؟</string>
    <string name="doYouConfirmDeleteReceipt">آیا از حذف گزارش قبض مطمئن هستید؟؟</string>
    <string name="doYouConfirmDeleteNotification">آیا از حذف اعلان مطمئن هستید؟؟</string>

    <string name="delete">حذف</string>

    <string name="user_fail_authentication">کاربر شناسایی نشد!!</string>

    <string name="userDashboard_bnv_menu_receipt">قبض ها</string>
    <string name="userDashboard_bnv_menu_repair">تعمیرات</string>
    <string name="userDashboard_bnv_menu_profile">پروفایل</string>
    <string name="userDashboard_bnv_menu_charge">شارژ</string>
    <string name="userDashboard_bnv_menu_notification">اطلاعیه ها</string>

    <string name="page_title_building_list">لیست ساختمان ها</string>
    <string name="page_title_unit_list">واحد های ساختمان %s</string>
    <string name="page_title_unit_info">مشخصات</string>
    <string name="page_title_register_new_building">ایجاد ساختمان جدید</string>
    <string name="page_title_building_info">مشخصات ساختمان</string>
    <string name="page_title_new_unit">واحد جدید</string>
    <string name="page_title_receipt">قبض ها</string>
    <string name="page_title_new_receipt">قبض جدید</string>
    <string name="page_title_notification">اطلاعیه ها</string>
    <string name="page_title_new_notification">اطلاعیه جدید</string>
    <string name="page_title_repair">تعمیرات</string>
    <string name="page_title_new_repair">تعمیر جدید</string>
    <string name="page_title_new_charge">شارژ جدید</string>
    <string name="page_title_charge_list">لیست شارژ ها</string>

    <string name="subject">موضوع</string>
    <string name="message">پیام</string>

    <string name="successfully_registered">با موفقیت ذخیره شد</string>

    <string name="name_and_family">نام و نام خانوادگی : %s</string>
    <string name="phone_number">شماره تلفن : %s</string>

    <string name="description_slide1">به برنامه مدیر ساختمان خوش آمدید\n این برنامه به تعامل بهتر بین مدیرساختمان و اعضای ساختمان کمک میکند</string>
    <string name="description_slide2">امکان ثبت ، مشاهده و اشتراک گزاری قبوض ، تعمیرات و اطلاعیه های ساختمان بین مدیر و ساکنین</string>
    <string name="description_slide3">قابلیت مشاهده اطلاعات اعضا و همچنین ثبت و گزارش گیری شارژ هر واحد ساختمان بصورت مجزا</string>

    <string name="next">بعدی</string>
    <string name="prev">قبلی</string>
    <string name="start">شروع برنامه</string>

</resources>