<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/primaryTextColor"
        android:text="@string/bugReport_dialog_title"
        android:layout_margin="@dimen/medium_margin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/secondaryTextColor"
        android:text="@string/bugReport_dialog_message"
        android:layout_margin="@dimen/medium_margin"
        />

    <TextView
        android:id="@+id/tv_bug_dialog_send_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:layout_gravity="end"
        style="@style/textViewButton_style"
        />

</LinearLayout>