<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fragment_registerNewNotification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textInputLayout_outLine"
        android:hint="@string/notification_title">

        <EditText
            android:id="@+id/et_fragment_registerNewNotification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fragment_registerNewNotification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        style="@style/textInputLayout_outLine"
        android:hint="@string/notification_message">

        <EditText
            android:id="@+id/et_fragment_registerNewNotification_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="8"
            android:gravity="top"
            android:maxLength="100"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fragment_registerNewNotification_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textInputLayout_outLine"
        android:hint="@string/date">

        <EditText
            android:id="@+id/et_fragment_registerNewNotification_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_fragment_registerNewNotification_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        style="@style/fillButton"
    />

</LinearLayout>