<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_bar_new_repair_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/cardveiw_actionBar">

        <TextView
            style="@style/actionBar_title"
            android:text="@string/page_title_new_repair"/>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/action_bar_new_repair_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fragment_registerNewRepair_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            style="@style/textInputLayout_outLine">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fragment_registerNewRepair_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fragment_registerNewRepair_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            style="@style/textInputLayout_outLine">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fragment_registerNewRepair_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:gravity="top"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fragment_registerNewRepair_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount"
                style="@style/textInputLayout_outLine">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fragment_registerNewRepair_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fragment_registerNewRepair_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date"
                style="@style/textInputLayout_outLine">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fragment_registerNewRepair_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_fragment_registerNewRepair_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/submit"
        style="@style/fillButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>