<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VIEW.ManagerUnitInfoActivity"
    android:gravity="end"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_bar_unit_info"
        style="@style/cardveiw_actionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            style="@style/actionBar_title"
            android:text="@string/page_title_unit_info"/>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/action_bar_unit_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unitInfo"
            style="@style/section_divider"
            android:layout_marginTop="@dimen/medium_margin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:id="@+id/tv_unitInfo_unitNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/secondaryTextColor"
                />

            <TextView
                android:id="@+id/tv_unitInfo_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/secondaryTextColor"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ownerInfo"
            style="@style/section_divider"
            android:layout_marginTop="@dimen/section_margin_top"
            />
        <LinearLayout
            android:id="@+id/container_unitOwner_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:id="@+id/tv_unitInfo_ownerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/secondaryTextColor"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/medium_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/iv_unitInfo_call"
                        android:layout_width="@dimen/small_image_size"
                        android:layout_height="@dimen/small_image_size"
                        android:scaleType="fitXY"
                        android:src="@drawable/call"
                        />

                    <ImageView
                        android:id="@+id/iv_unitInfo_sms"
                        android:layout_width="@dimen/small_image_size"
                        android:layout_height="@dimen/small_image_size"
                        android:scaleType="fitXY"
                        android:src="@drawable/message"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_unitInfo_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changes"
            style="@style/section_divider"
            android:layout_marginTop="@dimen/section_margin_top"
            />
        <LinearLayout
            android:id="@+id/container_unitAction_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:id="@+id/tv_unitInfo_addCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addCharge"
                style="@style/textViewButton_style"
                />

            <TextView
                android:id="@+id/tv_unitInfo_listCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chargeList"
                style="@style/textViewButton_style"
                />

            <TextView
                android:id="@+id/tv_unitInfo_deleteUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteUnit"
                style="@style/textViewButton_style"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_unitInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>