<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/tv_setRole"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/primaryTextColor"
        />

    <Button
        android:id="@+id/btn_setRole_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_setRole_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:layout_marginRight="50dp"
        android:text="@string/btn_setRole_manager"
        style="@style/fillButton"
        />

    <Button
        android:id="@+id/btn_setRole_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:layout_marginLeft="50dp"
        app:layout_constraintRight_toLeftOf="@id/btn_setRole_manager"
        android:text="@string/btn_setRole_user"
        style="@style/fillButton"
        />

    <FrameLayout
        android:id="@+id/fl_setRole"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>